--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+/tools
+/deps
+/nuget
+
 # User-specific files
 *.suo
 *.user
@@ -82,7 +86,4 @@ StyleCopReport.xml
 # but keep track of directories ending in .cache
 !*.[Cc]ache/
 
-# Including strong name files can present a security risk 
-# (https://github.com/github/gitignore/pull/2483#issue-259490424)
-#*.snk
 
